@@ -5,6 +5,7 @@ December-2011 0.5.8
 - Bug fixed: Minor problem of APP_KLOG_NUMBER ADIF header fixed.
 - GUI updated: Remove the map tab in the main GUI as it is still not implemented.
 - GUI updated: Ordered the tab-switching to make it more usable. (TNX Cedric).
+- Added the support for QRP. Power has two decimals. (TNX VK4JAZ).
 
 November-2010 0.5.7
 - New feature: Added the Export needed QSL that allows to create an ADIF file with all the QSO with new ones and new bands still not confirmed that has not been QSLed.
